--- a/quickcode/website/templates/problem.html
+++ b/quickcode/website/templates/problem.html
@@ -1,8 +1,29 @@
 {% extends "base.html" %}
 
+{% block title %}{{problem.name}}{% endblock %}
+
 {% block content %}
 <div id="res-cont">
   <center><h1>{{problem.name}}</h1></center>
-  {{problem.description}}
+
+
+  <h3>Problem</h3>
+  {{problem.description|safe}}
+
+  <br>
+  <h3>Submissions</h3>
+
+  {% if submissions %}
+    {% for element in submissions %}
+      <div class="problem-block-index">
+        {{element.get_result_display}} - {{element.submissionTime}}
+      </div>
+    {% endfor %}
+  {% else %}
+    <div class="problem-block-index">
+      No submissions done yet.
+    </div>
+  {% endif %}
+
 </div>
 {% endblock %}
