--- a/quickcode/website/templates/base.html
+++ b/quickcode/website/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block title %}<title>Title</title>{% endblock %}
+    <title>{% block title %}Title{% endblock %}</title>
 
     {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
