--- a/quickcode/website/templates/index.html
+++ b/quickcode/website/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="res-cont">
-  <center><h1>TBD - Index</h1></center>
+  <center><h1>Index</h1></center>
 
   {% for element in problems %}
   <div class="problem-block-index">
