--- a/quickcode/website/templates/problem.html
+++ b/quickcode/website/templates/problem.html
@@ -2,12 +2,16 @@
 
 {% block title %}{{problem.name}}{% endblock %}
 
-{% block content %}
+{% block hblock %}
 <script>
 if ( window.history.replaceState ) {
   window.history.replaceState( null, null, window.location.href );
 }
 </script>
+{% endblock %}
+
+{% block content %}
+
 <div id="res-cont">
   <center><h1>{{problem.name}}</h1></center>
 
