--- a/quickcode/website/templates/about.html
+++ b/quickcode/website/templates/about.html
@@ -3,9 +3,8 @@
 {% block content %}
 <div id="res-cont">
     <center><h1>About</h1></center>
-    Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <p>QuickCode is a small submission testing system written using Django as an assignment for Fundamentals of Object-Oriented Programming
+    course taught at Taras Shevchenko National University of Kyiv. QuickCode allows submitting user generated code written in C++,
+    which will then get compiled and evaluated on hidden test sets in a secure Docker container. </p>
 </div>
 {% endblock %}
